Fix CSS and stretching the sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 /* RESET CSS */ 
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -26,14 +25,11 @@ body {
 }
 
 .App {
-  display: grid;
-  grid-template-columns: 20% 1fr;
+  display: flex;
 }
 
-.First-Column {
-  height: 100%;
-  background-color: #425ac6;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
+.App-Sidebar {
+
 }
 
 .Square-Border-Radius {
