--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -19,28 +19,8 @@
     padding: 20px 0;
 }
 
-label {
-    display: block;
-    font-size: 23px;
-    color: #6F6F6F;
-}
-
-input {
-    height: 48px;
-    width: 50%;
-    margin-top: 5px;
-    margin-right: 15px;
-    border-radius: 5px;
-    border: none;
-    box-shadow: 0px 0px 2px;
-}
-
-button {
-    padding: 22px;
-    background-color: #3F66F6;
-    color: white;
-    font-size: 14px;
-    border: none;
-    border-radius: 5px;
-    box-shadow: 0px 0px 2px black;
+.Sidebar {
+    background-color: #425ac6;
+    padding: 0 35px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
 }
